# masto.nyc-docean

./: .gitignore  .gitmodules  .terraform.lock.hcl  README.md  databases.tf  firewalls.tf  kubernetes-secrets.tf  kubernetes.tf  migration_notes.md  networking.tf  provider.tf  scale_for_upgrade.sh  variables.tf
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: docker_images.yaml
docker/page-replica/: Dockerfile  README.md  api.js  index.js
docker/timeline-health/: Dockerfile  README.md  pyproject.toml  requirements.txt
docker/timeline-health/app/: __init__.py  health_check.py
docker/welcome-bot/: Dockerfile  pyproject.toml  requirements.txt
docker/welcome-bot/app/: welcome.py
kubernetes/: ns.yaml
kubernetes/cronjobs/: configmap-betterstack.yaml  configmap-storage-backups.yaml  configmap-timeline-health.yaml  cronjob-indexup.yaml  cronjob-media-remove.yaml  cronjob-postgres-backup.yaml  cronjob-sync-blocked-email-domains.yaml  cronjob-timeline-health-check.yaml  postgres-backup.yaml  postgres-storage-backup.yaml  postgres-uptime-report.yaml  secret-sync-blocked-email-domains.yaml  timeline-health-check.yaml
kubernetes/dependencies/: cloudflared.yaml  configmap-haproxy-redis.yaml  configmap-nginx.yaml  deployment-cloudflared.yaml  deployment-haproxy-for-redis.yaml  deployment-libretranslate.yaml  deployment-nginx.yaml  deployment-page-replica.yaml  deployment-stunnel.yaml  haproxy-redis.yaml  secret-welcome.yaml  webhook-welcome.yaml
kubernetes/mastodon/: configmap-env-secret.yaml  configmap-env-tf.yaml  deployment-sidekiq-default.yaml  (+12 more)
(+7 files in other folders)
